endpoints errors fixed
